<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bgLogin">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="140dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/todoimage" />

    <TextView
        android:id="@+id/labelWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/wc_todo"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.041"
        />

    <TextView
        android:id="@+id/lNamaLgn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/lNama"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.180"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelWelcome" />

    <EditText
        android:id="@+id/edtxtNamaLgn"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hNamaLgn"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNamaLgn" />

    <TextView
        android:id="@+id/lPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lPass"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtNamaLgn" />

    <EditText
        android:id="@+id/edtxtPassLgn"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_border"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hPwLgn"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lPassword" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/btnSignIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtPassLgn" />

    <TextView
        android:id="@+id/lNewToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/newToDoApp"
        android:textColor="@color/blueToDo"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.450"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"/>

    <TextView
        android:id="@+id/lRegisterSgIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lRegisterSgIn"
        android:textColor="@color/blueRegister"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        app:layout_constraintLeft_toRightOf="@id/lNewToDo"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
        android:layout_marginLeft="-100dp"

        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>