<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="7dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regis"
         />

    <TextView
        android:id="@+id/labelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/lRegisterSgIn"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100"
        app:layout_constraintHorizontal_bias="0.120"
        />


    <TextView
        android:id="@+id/lNamaRgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lNama"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelRegister" />

    <EditText
        android:id="@+id/edtxtNamaRgs"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_blue"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hNamaLgn"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNamaRgs" />

    <TextView
        android:id="@+id/lEmailRgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lEmail"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtNamaRgs" />

    <EditText
        android:id="@+id/edtxtEmailRgs"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_blue"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lEmailRgs" />

    <TextView
        android:id="@+id/lPasswordRgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lPass"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtEmailRgs" />

    <EditText
        android:id="@+id/edtxtPassRgs"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_blue"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hPwLgn"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lPasswordRgs" />

    <TextView
        android:id="@+id/lRePasswordRgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lRePass"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.120"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtPassRgs" />

    <EditText
        android:id="@+id/edtxtRePassRgs"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_blue"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hRepass"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lRePasswordRgs" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:text="@string/lRegisterSgIn"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtRePassRgs" />




</androidx.constraintlayout.widget.ConstraintLayout>