<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputTodo">

    <TextView
        android:id="@+id/lWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lWelcome"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050"
        app:layout_constraintHorizontal_bias="0.050"/>

    <TextView
        android:id="@+id/lInputLgn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lUserRoL"
        android:textColor="@color/blueRegister"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/lWelcome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050"
        app:layout_constraintHorizontal_bias="0.050"  />

    <TextView
        android:id="@+id/lInputRgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lUserRoL"
        android:textColor="@color/blueRegister"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/lWelcome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050"
        app:layout_constraintHorizontal_bias="0.050" />

    <TextView
        android:id="@+id/lTask1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lWelcome"
        app:layout_constraintHorizontal_bias="0.030"
        />

    <TextView
        android:id="@+id/lTask2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lTask1"
        app:layout_constraintHorizontal_bias="0.030" />

    <EditText
        android:id="@+id/edtxtTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/hTask"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lTask2" />
    <TextView
        android:id="@+id/lJTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lJTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtTask"
        app:layout_constraintHorizontal_bias="0.030" />

    <EditText
        android:id="@+id/edtxtJTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/hTask"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lJTask" />
    <TextView
        android:id="@+id/lTTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lTTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxtJTask"
        app:layout_constraintHorizontal_bias="0.030" />

    <EditText
        android:id="@+id/edtxtTTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/hTask"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lTTask" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtTTask"
        app:srcCompat="@android:drawable/ic_input_add" />


</androidx.constraintlayout.widget.ConstraintLayout>