<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HasilToDo">


    <TextView
        android:id="@+id/tvTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.030"
        app:layout_constraintVertical_bias="0.080"

        />

    <TextView
        android:id="@+id/tvHslTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTask"
        app:layout_constraintHorizontal_bias="0.030" />

    <TextView
        android:id="@+id/tvHslEdTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lHasil"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHslTask"
        app:layout_constraintHorizontal_bias="0.030" />
    <TextView
        android:id="@+id/tvJHslTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lJTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHslEdTask"
        app:layout_constraintHorizontal_bias="0.030" />

    <TextView
        android:id="@+id/tvJHslEdTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lHasil"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJHslTask"
        app:layout_constraintHorizontal_bias="0.030" />
    <TextView
        android:id="@+id/tvTHslTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lTTask"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJHslEdTask"
        app:layout_constraintHorizontal_bias="0.030" />

    <TextView
        android:id="@+id/tvTHslEdTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lHasil"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTHslTask"
        app:layout_constraintHorizontal_bias="0.030" />

</androidx.constraintlayout.widget.ConstraintLayout>